# NG-hackweek-2023

./: .gitignore  README.md  data_analysis.ipynb  flake.nix  notebook.ipynb  pyproject.toml  requirements.txt  run_model.ipynb  training.ipynb
analyzed_data/: accuracy.csv  loss.csv  runtime.csv
notebooks/: training.ipynb
src/app/: __main__.py
src/quality_control/: __main__.py
src/trainer/: __main__.py
training_results/: convnext.json  resnet.json  vit.json
