[project]
name = "quality_control"
version = "0.1.0"
# description = ""
authors = [
    { name = "Alvin Shen", email = "29553973+asian-dev@users.noreply.github.com" },
]
dependencies = [
    "torch>=2.1.0",
]
requires-python = ">=3.10"

[tool.pdm.dev-dependencies]
dev = [
    "mypy>=1.6.1",
    "black>=23.10.1",
    "ruff>=0.1.1",
]
