[project]
name = "quality_control"
version = "0.1.0"
# description = ""
authors = [
    { name = "Alvin Shen", email = "29553973+asian-dev@users.noreply.github.com" },
]
dependencies = [
    "torch>=2.1.0",
    "transformers[torch]>=4.34.1",
    "pillow>=10.1.0",
    "icecream>=2.1.3",
    "evaluate>=0.4.1",
    "ipykernel>=6.26.0",
    "datasets[vision]>=2.14.6",
    "scikit-learn>=1.3.2",
    "tensorboardX>=2.6.2.2",
    "dearpygui==1.10.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.1",
]
requires-python = ">=3.11"

[tool.pdm.dev-dependencies]
dev = ["mypy>=1.6.1"]
